--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/js/home/login.js"></script>
+    <script defer src="/js/home/login.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <input type="text" placeholder="ID"><br>
-    <input type="text" placeholder="Password"><br>
+    <input id="id" type="text" placeholder="ID"><br>
+    <input id="pw" type="text" placeholder="Password"><br>
     <button>ログイン</button>
 </body>
 </html>
