--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/home/login.css">
     <script defer src="/js/home/login.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <input id="id" type="text" placeholder="ID"><br>
-    <input id="pw" type="text" placeholder="Password"><br>
-    <button>ログイン</button>
+    <div class="login-page">
+        <div class="form">
+            <form class="login-form">
+                <input id="id" type="text" placeholder="ID"/>
+                <input id="pw" type="password" placeholder="パスワード"/>
+                <button>login</button>
+                <p class="message">Not registered? <a href="/register">Create an account</a></p>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
+
+<!-- Copyright (c) 2021 by Aigars Silkalns (https://codepen.io/colorlib/pen/rxddKy) -->
