--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/home/login.css">
-    <script defer src="/js/home/login.js"></script>
+    <script defer src="/js/home/register.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
                 <input id="name" type="text" placeholder="お名前"/>
                 <input id="pw" type="password" placeholder="パスワード"/>
                 <input id="confirm-pw" type="password" placeholder="パスワード確認"/>
-                <button>SIGN UP</button>
+                <p id=button>SIGN UP</p>
                 <p class="message">Already registered? <a href="/login">login</a></p>
             </form>
         </div>
